src/objects/API_Field_Mapping__c.object
<CustomObject>
    <description>API Endpoint Field Mapping that maps SObject Field to String Field Name</description>
    <fields>
        <fullName>API_Endpoint__c</fullName>
        <description>Endpoint for the Field Mapping</description>
        <label>API Endpoint</label>
        <referenceTo>API_Endpoint__c</referenceTo>
        <relationshipLabel>API Field Mappings</relationshipLabel>
        <relationshipName>API_Field_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Allowed_Methods__c</fullName>
        <description>Allowed HTTP Methods for this Field Mapping</description>
        <label>Allowed Methods</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HTTP_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>Field Mapping Name</description>
        <label>Field Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapped_API_Endpoint__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>API Endpoint that should be used to build a Related List for this SObject Field Mapping</description>
        <label>Mapped API Endpoint</label>
        <referenceTo>API_Endpoint__c</referenceTo>
        <relationshipLabel>API Field Mappings (Mapped API Endpoint)</relationshipLabel>
        <relationshipName>API_Related_Field_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_for_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags field as required for creating a record</description>
        <label>Required for Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_for_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags field as required for updating a record using PUT or POST</description>
        <label>Required for Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SObject_Field_Name__c</fullName>
        <description>SObject Field Name for the mapped field</description>
        <label>SObject Field Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>API Field Mapping</label>
    <nameField>
        <displayFormat>AFM-{0000000}</displayFormat>
        <label>API Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Create_requires_HTTP_Method</fullName>
        <active>true</active>
        <description>Create requires correct HTTP Method</description>
        <errorConditionFormula>AND(
   Required_for_Create__c,
   NOT( INCLUDES( Allowed_Methods__c ,&apos;POST&apos;) )
)</errorConditionFormula>
        <errorDisplayField>Required_for_Create__c</errorDisplayField>
        <errorMessage>Create requires correct HTTP Method</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lookup_Create_or_Update_not_allowed</fullName>
        <active>true</active>
        <description>Create and Update not allowed on Lookup Field</description>
        <errorConditionFormula>AND(
    OR( Required_for_Create__c, Required_for_Update__c ),
    CONTAINS( SObject_Field_Name__c, &apos;.&apos; )
)</errorConditionFormula>
        <errorDisplayField>SObject_Field_Name__c</errorDisplayField>
        <errorMessage>Create and Update not allowed on Lookup Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Update_requires_HTTP_Method</fullName>
        <active>true</active>
        <description>Update requires correct HTTP Method</description>
        <errorConditionFormula>AND(
    Required_for_Update__c,
    OR(
        NOT( INCLUDES( Allowed_Methods__c, &apos;POST&apos; ) ),
        NOT( INCLUDES( Allowed_Methods__c, &apos;PUT&apos; ) )
    )
)</errorConditionFormula>
        <errorDisplayField>Required_for_Update__c</errorDisplayField>
        <errorMessage>Update requires correct HTTP Method</errorMessage>
    </validationRules>
</CustomObject>